--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,4 @@
 $primary-color: salmon;
-$secondary-color: rgb(204, 216, 204);
-$link-color: rgb(18, 18, 73);
-$highligt-color: whitesmoke;
+$secondary-color: pink;
+$link-color: rgb(127, 14, 32);
+$highligt-color: antiquewhite;
