--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,3 +2,4 @@ $primary-color: salmon;
 $secondary-color: pink;
 $link-color: rgb(127, 14, 32);
 $highligt-color: antiquewhite;
+$red: rgb(197, 41, 41);
