--- a/src/views/Homepage.module.scss
+++ b/src/views/Homepage.module.scss
@@ -9,7 +9,7 @@
     text-align: center;
     }
     h2{
-      color: $highligt-color;
+      color: $red;
       font-size:72px;
       line-height:1rem;
     }
