--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -6,6 +6,7 @@
   padding:1rem;
   width:100%;
   background-color: $secondary-color;
+  color: $red;
   display:flex;
   flex-direction: row;
   align-items: center;
