--- a/src/components/UserList.module.scss
+++ b/src/components/UserList.module.scss
@@ -12,16 +12,31 @@
     display:grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 10px;
+    a{
+      text-decoration: none;
+    }
   }
   &__itempreview{
+   
   padding:2rem;
- 
   background-color: antiquewhite;
   text-transform: capitalize;
+  text-align: center;
   border-radius: 9px;
+  height:200px;
+  display:flex;
+  align-items: center;
+  flex-direction: column-reverse;
+  justify-content: center;
+  
+  p{
+    margin-bottom:2px;
+  }
 
   h3{color: $red;}
   margin:20px;
+  margin-top:1px;
+  font-size:large;
   }
   &__itempreview:hover{
     filter: drop-shadow(0 0 0.75rem crimson);
