--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -11,6 +11,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  margin-bottom:-1rem;
   span{
     display:flex;
     flex-direction: row;
