--- a/src/App.scss
+++ b/src/App.scss
@@ -3,11 +3,12 @@
 
 body{
   background-color:  $primary-color;
+  display:block;
+  margin: 0 auto;
 }
 .App{
 
   margin: 0 auto;
-  margin-top:-1rem;
-  margin-right:-2rem;
- 
+  
+
 }
