--- a/src/views/IndividualItem.module.scss
+++ b/src/views/IndividualItem.module.scss
@@ -72,5 +72,11 @@
     text-transform: capitalize;
     flex-wrap: wrap;
     margin-bottom:4em;
+    img{
+      width:100%;
+      border-radius: 9px;
+      margin-top:2em;
+    }
+    
   }
 }
